# qtapp

./: CMakeLists.txt
include/qtcapp/: MainWindow.hpp
src/: MainWindow.cpp  MainWindow.ui  main.cpp
